2007-03-20  Daniel Macks  <dmacks@netspace.org>

	* subclasses.t: Rename desc_short() to description()

2007-03-20  Daniel Macks  <dmacks@netspace.org>

	* subclasses.t: Remove stamp-handlers from API
	* last_done.t: Update to new 3-value return and return for old
	formats

2007-03-20  Daniel Macks  <dmacks@netspace.org>

	* last_done.t: add checks for return values

2007-03-09  Daniel Macks  <dmacks@netspace.org>

	* subclasses.t: add checks for method_name and desc_short public APIs

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* subclasses.t: add check for system_check public API

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* subclasses.t: add check for do_direct public API

2007-03-07  Daniel Macks  <dmacks@netspace.org>

	* subclasses.t: Nuke redundant SU::tarball class

2007-03-06  Daniel Macks  <dmacks@netspace.org>

	* subclasses.t: Make sure all SU::* are proper subclasses with
	full public interface